# dona

./: .editorconfig  .env.template  .gitignore  .rustfmt.toml  Cargo.toml  Readme.md  compose.yml
contexts/backoffice/: Cargo.toml
contexts/backoffice/src/: lib.rs
contexts/backoffice/src/auth/application/: mod.rs  response.rs
contexts/backoffice/src/auth/application/authenticate/: command.rs  service.rs
contexts/backoffice/src/auth/application/create_user/: command.rs  service.rs
contexts/backoffice/src/auth/application/delete_user/: command.rs  service.rs
contexts/backoffice/src/auth/application/find_user/: query.rs  service.rs
contexts/backoffice/src/auth/application/find_users_by_criteria/: query.rs  service.rs
contexts/backoffice/src/auth/application/update_user/: command.rs  service.rs
contexts/backoffice/src/auth/domain/: mod.rs  password_hasher.rs  user.rs  user_events.rs  user_repository.rs
contexts/backoffice/src/auth/infrastructure/: mod.rs
contexts/backoffice/src/auth/infrastructure/hasher/: argon_hasher.rs
contexts/backoffice/src/auth/infrastructure/persistence/: mod.rs  sea_user_repo.rs
contexts/dona_context/: Cargo.toml
contexts/dona_context/src/: lib.rs  test_utils.rs
contexts/dona_context/src/dona/domain/: dona.rs  dona_confirmed_event.rs  dona_created_event.rs  dona_rejected_event.rs  dona_repository.rs  mod.rs
contexts/dona_context/src/dona/infrastructure/persistence/: mod.rs  sea_dona_repo.rs
contexts/dona_context/src/posts/domain/: mod.rs  post.rs  post_content_updated_event.rs  post_created_event.rs  post_is_nsfw_updated_event.rs  post_picture_updated_event.rs  post_repository.rs
contexts/dona_context/src/posts/infrastructure/persistence/: mod.rs  sea_post_repo.rs
contexts/dona_context/src/shared/domain/dona/: mod.rs
contexts/dona_context/src/user_payment_method/application/: mod.rs  response.rs
contexts/dona_context/src/user_payment_method/application/create/: command.rs  service.rs
contexts/dona_context/src/user_payment_method/application/delete/: command.rs  service.rs
contexts/dona_context/src/user_payment_method/application/find/: query.rs  service.rs
contexts/dona_context/src/user_payment_method/application/find_by_criteria/: query.rs  service.rs
contexts/dona_context/src/user_payment_method/application/get_user_payment_methods/: query.rs  service.rs
contexts/dona_context/src/user_payment_method/application/update_instructions/: command.rs  service.rs
contexts/dona_context/src/user_payment_method/domain/: mod.rs  user_payment_method.rs  user_payment_method_created_event.rs  user_payment_method_repository.rs  user_payment_method_update_instructions_event.rs
contexts/dona_context/src/user_payment_method/infrastructure/persistence/: mod.rs  sea_user_payment_method_repo.rs
contexts/security/: Cargo.toml
contexts/security/src/session/application/: mod.rs
contexts/security/src/session/application/check_is_authenticated/: command.rs  service.rs
contexts/security/src/session/application/check_permission/: command.rs  service.rs
contexts/security/src/session/application/create/: command.rs  service.rs
contexts/security/src/session/application/logout/: command.rs  service.rs
contexts/security/src/session/domain/: repository.rs  user.rs
contexts/security/src/session/infrastructure/: persistence.rs
contexts/shared/: Cargo.toml
contexts/shared/src/: lib.rs
contexts/shared/src/common/domain/: base_errors.rs  mod.rs  utils.rs
contexts/shared/src/common/domain/bus/: event.rs  query.rs
contexts/shared/src/common/domain/criteria/: criteria.rs  cursor.rs  filter.rs  mod.rs  order.rs
contexts/shared/src/common/infrastructure/bus/: command.rs  event.rs  query.rs
contexts/shared/src/common/infrastructure/criteria/: async_graphql.rs  mod.rs  sea_criteria_converter.rs
contexts/shared/src/domain/: base_errors.rs  mod.rs  utils.rs
contexts/shared/src/domain/bus/: command.rs  event.rs  query.rs
contexts/shared/src/domain/criteria/: criteria.rs  cursor.rs  filter.rs  mod.rs
contexts/shared/src/domain/storage/: mod.rs
contexts/shared/src/domain/value_objects/: user_id.rs
contexts/shared/src/infrastructure/: mod.rs
contexts/shared/src/infrastructure/bus/: command.rs  event.rs  query.rs
contexts/shared/src/infrastructure/criteria/: async_graphql.rs  sea_criteria_converter.rs
contexts/shared/src/infrastructure/storage/: mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: gql_validators.rs  graphql.rs  lib.rs  main.rs  server.rs
src/backoffice_app/: di.rs  mod.rs
src/backoffice_app/graphql/: mod.rs
src/backoffice_app/graphql/auth/: create_mutation.rs  delete_mutation.rs  find_user_query.rs  find_users_query.rs  login_mutation.rs  logout_mutation.rs  mod.rs  types.rs  update_mutation.rs
src/dona/: di.rs
src/security/: di.rs
tests/: mod.rs
tests/common/: actix.rs  db.rs  mod.rs  poem.rs
tests/graphql/: mod.rs
tests/graphql/backoffice/: auth.rs
tests/graphql/backoffice_tests/: auth.rs
