[workspace]
members = [ "contexts/backoffice", "contexts/dona_context", "contexts/shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Adolfo Bastardo <contact@adolfo.co.ve>"]
description = "Dona is a service to manage personal donations."
license = "AGPL-3.0"

[package]
name = "dona"
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
argon2 = "0.5.3"
async-trait = "0.1.77"
lazy_static = "1.4.0"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
time = {version = "0.3.34", features = ["macros", "serde-human-readable", "rand"]}
tokio = {version = "1.36.0", features = ["full"]}
uuid = {version = "1.7.0", features = ["serde", "v7"]}

fake ={ version = "2.9.2", features = ["derive", "rust_decimal", "time", "uuid"]}
mockall = "0.12.1"

[dependencies]
