[workspace]
members = [ "contexts/backoffice", "contexts/dona_context", "contexts/shared", "migration"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Adolfo Bastardo <contact@adolfo.co.ve>"]
description = "Dona is a service to manage personal donations."
license = "AGPL-3.0"

[package]
name = "dona"
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-web = "4"
argon2 = "0.5.3"
async-graphql = { version = "7", features = ["rust_decimal", "uuid", "time", "tokio"]}
async-graphql-actix-web = "7"
async-trait = "0.1.77"
lazy_static = "1.4.0"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
sea-orm = { version = "0.12", default-features = false, features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-rust_decimal", "with-time", "with-uuid" ] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
time = {version = "0.3.34", features = ["macros", "serde-human-readable", "rand"]}
tokio = {version = "1.36.0", features = ["full"]}
uuid = {version = "1.7.0", features = ["serde", "v7"]}

fake ={ version = "2.9.2", features = ["derive", "rust_decimal", "time", "uuid"]}
mockall = "0.12.1"

[dependencies]
actix-web.workspace = true
async-graphql.workspace = true
async-graphql-actix-web.workspace = true
async-trait.workspace = true
sea-orm.workspace = true
time.workspace = true
uuid.workspace = true

shared = { path = "contexts/shared" }
backoffice = { path = "contexts/backoffice" }

[dev-dependencies]
sea-orm = { version = "*", features = ["with-rust_decimal", "with-time", "with-uuid", "debug-print", "runtime-tokio-rustls", "sqlx-postgres"] }
