[workspace]
members = [ "contexts/backoffice", "contexts/dona_context", "contexts/security", "contexts/shared", "migration"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Adolfo Bastardo <contact@adolfo.co.ve>"]
description = "Dona is a service to manage personal donations."
license = "AGPL-3.0"

[package]
name = "dona"
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "dona"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
argon2 = "0.5.3"
async-graphql = { version = "7", features = ["rust_decimal", "uuid", "time", "tokio"]}
async-graphql-poem = "7"
async-trait = "0.1.77"
lazy_static = "1.4.0"
poem = {version = "2.0", features = ["redis-session", "csrf", "rustls", "acme", "yaml", "test"]}
redis = { version = "0.24.0", features = ["tokio-comp", "r2d2", "connection-manager"] } # the newer version of redis is not compatible with the current version of poem
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
sea-orm = { version = "0.12", default-features = false, features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-rust_decimal", "with-time", "with-uuid" ] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
time = {version = "0.3.34", features = ["macros", "serde-human-readable", "rand"]}
tokio = {version = "1.36.0", features = ["full"]}
uuid = {version = "1.7.0", features = ["serde", "v7"]}

fake ={ version = "2.9.2", features = ["derive", "rust_decimal", "time", "uuid"]}
mockall = "0.12.1"
testcontainers = "0.15.0"

[dependencies]
async-graphql.workspace = true
async-graphql-poem.workspace = true
async-trait.workspace = true
poem.workspace = true
redis.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
tokio.workspace = true

shared = { path = "contexts/shared" }
backoffice = { path = "contexts/backoffice" }
security = { path = "contexts/security" }

[dev-dependencies]
sea-orm = { version = "*", features = ["with-rust_decimal", "with-time", "with-uuid", "debug-print", "runtime-tokio-rustls", "sqlx-postgres"] }
mockall.workspace = true
testcontainers.workspace = true

migration = { path = "migration" }
