[package]
name = "migration"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
