[package]
name = "shared"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
lazy_static.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
